--- a/test/index.html
+++ b/test/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>ungap Map</title>
+  <!--[if lt IE 9]>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/es5-shim/4.5.7/es5-shim.min.js">
+    </script><script src="https://cdnjs.cloudflare.com/ajax/libs/es5-shim/4.5.7/es5-sham.min.js"></script>
+  <![endif]-->
   <script src="global.js"></script>
   <script type="module">
   import M from '../esm/index.js';
@@ -23,7 +27,4 @@
   };
   </script>
 </head>
-<body>
-  
-</body>
 </html>
